fix: footer overflow

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -7,4 +7,5 @@ footer {
   height: 72px;
   line-height: 72px;
   background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+  overflow-y: auto;
 }
